:fire: require user-input key

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -71,4 +71,25 @@ body {
 			cursor: not-allowed;
 		}
 	}
+
+	.input,
+	.textarea {
+		border: 1px solid theme('colors.gray.500');
+		border-radius: theme('borderRadius.md');
+		background-color: theme('colors.black/0.5');
+		font-family: theme('fontFamily.mono');
+		color: theme('colors.white');
+		resize: none;
+		padding: theme('padding.2');
+
+		&:focus {
+			border-color: theme('colors.orange.300');
+			outline: none;
+			@apply ring ring-orange-300;
+		}
+	}
+
+	.textarea {
+		padding: theme('padding.4');
+	}
 }
